# holonomic-core

./: Cargo.toml
.github/workflows/: ci.yml
benches/: manifold_bench.rs
examples/: lwe_compliance_test.rs
src/: lib.rs  main.rs
src/core/: manifold.rs  mod.rs  tension.rs
src/crypto/: lwe.rs  mod.rs
src/evolution/: mod.rs
src/observer/: mod.rs
src/physics/: mod.rs
tests/: holonomic_stress_tests.rs  quantum_manifolds_tests.rs
theory/: foundation.tex
