[package]
name = "ark_penta_v_core"
version = "2.0.0"
edition = "2021"

[dependencies]
rug = "1.30.0"
dashmap = "6.2.1"
rayon = "1.12.0"
tokio = { version = "1.37.0", default-features = false, features = ["sync", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "manifold_bench"
harness = false
